In the process of refactoring lib/csv_2_kml_tour.rb so that it will collect and output summary information.  Started this process two months ago but had to put it on the back-burner for a while.  So now I need to wrap my head back around where I was.  In the meantime, the code is broken, but I none the less wanted to commit my current status to git because none of it is on the server yet...

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,10 @@
 # Ignore all logfiles and tempfiles.
 /log/*.log
 /tmp
+
+# Ignore temp and swap vim viles
+*.sw[a-z]
+*~
+
+# Ignore my directory of code test files:
+/files_for_test_runs
